force-app/main/default/objects/Legal_Action__c/Legal_Action__c.object-meta.xml
<CustomObject>
    <label>Legal Action</label>
    <nameField>
        <displayFormat>LA-{000000}</displayFormat>
        <label>Legal Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>