force-app/main/default/objects/Legal_Action__c/fields/Alleged_claims__c.field-meta.xml
<CustomField>
    <fullName>Alleged_claims__c</fullName>
    <label>Alleged claims</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Misappropriation of Trade Secrets</fullName>
            </value>
            <value>
                <fullName>Breach of Fiduciary Duty</fullName>
            </value>
            <value>
                <fullName>Conversion</fullName>
            </value>
            <value>
                <fullName>Unfair Competition</fullName>
            </value>
            <value>
                <fullName>Intentional Interference with Economic Advantage</fullName>
            </value>
            <value>
                <fullName>Malicious Prosecution</fullName>
            </value>
            <value>
                <fullName>Defamation</fullName>
            </value>
            <value>
                <fullName>Injunctive relief</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>