force-app/main/default/objects/Legal_Action__c/fields/Alleged_claims_Other__c.field-meta.xml
<CustomField>
    <fullName>Alleged_claims_Other__c</fullName>
    <label>Alleged claims - Other</label>
    <type>TextArea</type>
</CustomField>