force-app/main/default/objects/Legal_Action__c/fields/Client_Employer_Joint_Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Employer_Joint_Employer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Employer/Joint Employer Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case_Role__c.Case__c</field>
            <operation>equals</operation>
            <valueField>$Source.Case__c</valueField>
        </filterItems>
        <filterItems>
            <field>Case_Role__c.Role__c</field>
            <operation>equals</operation>
            <value>Case Employer, Client Employer, Defendant, Defendant - Joint Employer, Joint Employer, PAGA Additional Employer, PAGA Employer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case_Role__c</referenceTo>
    <relationshipLabel>Legal Actions</relationshipLabel>
    <relationshipName>Legal_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>