force-app/main/default/objects/Legal_Action__c/fields/Court__c.field-meta.xml
<CustomField>
    <fullName>Court__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Court</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Office__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Courthouse</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>Legal Actions</relationshipLabel>
    <relationshipName>Legal_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>