force-app/main/default/objects/Legal_Action__c/fields/Court_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Court_Case_Number__c</fullName>
    <label>Court Case Number</label>
    <type>TextArea</type>
</CustomField>