force-app/main/default/objects/Legal_Action__c/fields/Date_of_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Outcome__c</fullName>
    <label>Date of Outcome</label>
    <type>Date</type>
</CustomField>