force-app/main/default/objects/Legal_Action__c/fields/File_Control_Number__c.field-meta.xml
<CustomField>
    <fullName>File_Control_Number__c</fullName>
    <label>File/Control Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>