force-app/main/default/objects/Legal_Action__c/fields/Interest_on_Wages__c.field-meta.xml
<CustomField>
    <fullName>Interest_on_Wages__c</fullName>
    <label>Interest on Wages</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>