force-app/main/default/objects/Legal_Action__c/fields/Motion_Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Motion_Application_Type__c</fullName>
    <label>Motion/Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Application (Misc.)</fullName>
            </value>
            <value>
                <fullName>Application for Judgment Debtor Examination</fullName>
            </value>
            <value>
                <fullName>Application for OSC</fullName>
            </value>
            <value>
                <fullName>Application for Service by Publication</fullName>
            </value>
            <value>
                <fullName>Default Prove-Up</fullName>
            </value>
            <value>
                <fullName>Demurrer</fullName>
            </value>
            <value>
                <fullName>Ex Parte App to Shorten Time</fullName>
            </value>
            <value>
                <fullName>Motion/App for Right to Attach Order</fullName>
            </value>
            <value>
                <fullName>Motion (Misc.)</fullName>
            </value>
            <value>
                <fullName>Motion for Assignment Order</fullName>
            </value>
            <value>
                <fullName>Motion for Charging Order</fullName>
            </value>
            <value>
                <fullName>Motion for Consolidation</fullName>
            </value>
            <value>
                <fullName>Motion for Relief from Stay</fullName>
            </value>
            <value>
                <fullName>Motion for Terminating Sanctions</fullName>
            </value>
            <value>
                <fullName>Motion In Limine</fullName>
            </value>
            <value>
                <fullName>Motion to Amend Judgment</fullName>
            </value>
            <value>
                <fullName>Motion to Appoint Receiver</fullName>
            </value>
            <value>
                <fullName>Motion to Compel Arbitration</fullName>
            </value>
            <value>
                <fullName>Motion to Compel Discovery Responses</fullName>
            </value>
            <value>
                <fullName>Motion to Convert</fullName>
            </value>
            <value>
                <fullName>Motion to Deem RFAs Admitted</fullName>
            </value>
            <value>
                <fullName>Motion to Determine Claim of Exemption</fullName>
            </value>
            <value>
                <fullName>Motion to Dismiss</fullName>
            </value>
            <value>
                <fullName>Motion to Quash</fullName>
            </value>
            <value>
                <fullName>Motion to Remove Mechanic's Lien</fullName>
            </value>
            <value>
                <fullName>Motion to Vacate Judgment</fullName>
            </value>
            <value>
                <fullName>Motion to Withdraw</fullName>
            </value>
            <value>
                <fullName>Opposition to Claim of Exemption</fullName>
            </value>
            <value>
                <fullName>Opposition to Motion/Application</fullName>
            </value>
            <value>
                <fullName>Other Brief</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>