force-app/main/default/objects/Legal_Action__c/fields/Notice_Type__c.field-meta.xml
<CustomField>
    <fullName>Notice_Type__c</fullName>
    <label>Notice Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acknowledgment of Assignment of Judgment</fullName>
            </value>
            <value>
                <fullName>Acknowledgment of Satisfaction of Judgment</fullName>
            </value>
            <value>
                <fullName>Case Management Conference Statement</fullName>
            </value>
            <value>
                <fullName>Exhibit List</fullName>
            </value>
            <value>
                <fullName>Jury Instructions</fullName>
            </value>
            <value>
                <fullName>Notice (Misc.)</fullName>
            </value>
            <value>
                <fullName>Notice of Appeal</fullName>
            </value>
            <value>
                <fullName>Notice of Appearance</fullName>
            </value>
            <value>
                <fullName>Notice of Association of Attorney</fullName>
            </value>
            <value>
                <fullName>Notice of Bankruptcy Case</fullName>
            </value>
            <value>
                <fullName>Notice of Mediator Assignment</fullName>
            </value>
            <value>
                <fullName>Notice of Related Case</fullName>
            </value>
            <value>
                <fullName>Notice of Ruling</fullName>
            </value>
            <value>
                <fullName>Notice of Settlement</fullName>
            </value>
            <value>
                <fullName>Notice of Stay</fullName>
            </value>
            <value>
                <fullName>Reporters Transcript Filed (Appeal)</fullName>
            </value>
            <value>
                <fullName>Statement of Case</fullName>
            </value>
            <value>
                <fullName>Status Conference Statement</fullName>
            </value>
            <value>
                <fullName>Substitution of Attorney Change of Address</fullName>
            </value>
            <value>
                <fullName>Trial Brief</fullName>
            </value>
            <value>
                <fullName>Witness List</fullName>
            </value>
            <value>
                <fullName>CSLB License Suspension</fullName>
            </value>
            <value>
                <fullName>ABC License Suspension</fullName>
            </value>
            <value>
                <fullName>BSIS License Suspension</fullName>
            </value>
            <value>
                <fullName>CDSS License Suspension</fullName>
            </value>
            <value>
                <fullName>Judgment Debtor Demand Letter</fullName>
            </value>
            <value>
                <fullName>238.5 Demand</fullName>
            </value>
            <value>
                <fullName>238 Bond Demand</fullName>
            </value>
            <value>
                <fullName>CSLB Bond Demand</fullName>
            </value>
            <value>
                <fullName>Car Wash Bond Demand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>