force-app/main/default/objects/Legal_Action__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assignment Order</fullName>
            </value>
            <value>
                <fullName>Order Amending Judgment</fullName>
            </value>
            <value>
                <fullName>Order Appointing Receiver</fullName>
            </value>
            <value>
                <fullName>Order Compelling Discovery Responses</fullName>
            </value>
            <value>
                <fullName>Order Determining Claim of Exemption</fullName>
            </value>
            <value>
                <fullName>Order for Sanctions</fullName>
            </value>
            <value>
                <fullName>Order Overruling Demurrer</fullName>
            </value>
            <value>
                <fullName>Order Sustaining Demurrer</fullName>
            </value>
            <value>
                <fullName>Order to Appear at Judgment Debtor Examination</fullName>
            </value>
            <value>
                <fullName>Order to Compel</fullName>
            </value>
            <value>
                <fullName>Order to Show Cause</fullName>
            </value>
            <value>
                <fullName>Order Vacating Judgment</fullName>
            </value>
            <value>
                <fullName>Other Order</fullName>
            </value>
            <value>
                <fullName>Right to Attach Order</fullName>
            </value>
            <value>
                <fullName>Case Management Order</fullName>
            </value>
            <value>
                <fullName>Dismissal Order</fullName>
            </value>
            <value>
                <fullName>Order Closing Bankruptcy Case</fullName>
            </value>
            <value>
                <fullName>Order for Entry of Judgment</fullName>
            </value>
            <value>
                <fullName>Order Setting Discovery Cutoff</fullName>
            </value>
            <value>
                <fullName>Order for Spousal Garnishment</fullName>
            </value>
            <value>
                <fullName>Scheduling Order</fullName>
            </value>
            <value>
                <fullName>Trial Setting Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>