force-app/main/default/objects/Legal_Action__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dismissed with Prejudice</fullName>
            </value>
            <value>
                <fullName>Dismissed without Prejudice</fullName>
            </value>
            <value>
                <fullName>Judgment in favor of Employer</fullName>
            </value>
            <value>
                <fullName>Judgment in favor of worker</fullName>
            </value>
            <value>
                <fullName>Settlement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>