force-app/main/default/objects/Legal_Action__c/fields/Outcome_Other__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Other__c</fullName>
    <label>Outcome - Other</label>
    <type>TextArea</type>
</CustomField>