force-app/main/default/objects/Legal_Action__c/fields/Retaliatory_Legal_Action__c.field-meta.xml
<CustomField>
    <fullName>Retaliatory_Legal_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retaliatory Legal Action</label>
    <type>Checkbox</type>
</CustomField>