force-app/main/default/objects/Legal_Action__c/recordTypes/Court_Order.recordType-meta.xml
<RecordType>
    <fullName>Court_Order</fullName>
    <active>true</active>
    <label>Court Order</label>
</RecordType>