force-app/main/default/objects/Legal_Action__c/recordTypes/Discovery.recordType-meta.xml
<RecordType>
    <fullName>Discovery</fullName>
    <active>true</active>
    <label>Discovery</label>
</RecordType>