force-app/main/default/objects/Legal_Action__c/recordTypes/Motion_Application.recordType-meta.xml
<RecordType>
    <fullName>Motion_Application</fullName>
    <active>true</active>
    <label>Motion/Application</label>
</RecordType>