force-app/main/default/objects/Legal_Action__c/recordTypes/Notice.recordType-meta.xml
<RecordType>
    <fullName>Notice</fullName>
    <active>true</active>
    <label>Notice/Demands</label>
</RecordType>